Fixed review comment wrapping

--- a/Web/public/css/style.css
+++ b/Web/public/css/style.css
@@ -594,6 +594,11 @@ form > button[type="submit"]:hover {
     color:rgb(90, 90, 90);
 }
 
+#reviews > .full-review > .comment > p {
+    margin-block-start: 0.5em;
+    margin-block-end: 0;
+}
+
 #reviews > .full-review > .comment > .author {
     color:rgb(114, 114, 114);
 }
